--- a/Blog App/App/templates/post_view.html
+++ b/Blog App/App/templates/post_view.html
@@ -6,8 +6,9 @@
 {% block Content %}
 
     <div class="navbar">
+        <p>BlogApp</p>
 
-        <ul>
+        <ul class="nav-list">
             <li><a href="/"> Home </a></li>
             <li><a href="/post_view"> Posts </a></li>
             <li><a href="/my-profile" >Profile</a></li>
