--- a/Blog App/App/templates/sign_up.html
+++ b/Blog App/App/templates/sign_up.html
@@ -7,7 +7,9 @@
 
     <div class="navbar">
 
-        <ul>
+        <p>BlogApp</p>
+
+        <ul class = 'nav-list'>
             <li><a href="/login"> Login </a></li>
             <li><a href="/sign_up" >Sign Up </a></li>
         </ul>
@@ -33,7 +35,7 @@
             <label for="password-comfirm">Password(Comfirm)</label>
             <input type="password" name="password-comfirm" id="password-comfirm">
 
-            <input type="submit" value="Create Account">
+            <input type="submit" value="Sign up">
 
 
         </form>
