--- a/Blog App/App/templates/view_user_post.html
+++ b/Blog App/App/templates/view_user_post.html
@@ -9,7 +9,9 @@
 
     <div class="navbar">
 
-        <ul>
+        <p>BlogApp</p>
+
+        <ul class = 'nav-list'>
             <li><a href="/"> Home </a></li>
             <li><a href="/post_view"> Posts </a></li>
             <li><a href="/my-profile" >Profile</a></li>
