--- a/Blog App/App/static/styles.css
+++ b/Blog App/App/static/styles.css
@@ -5,39 +5,52 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     background-color: rgb(39, 38, 38);
-    scroll-snap-type: none;
+    scroll-snap-type:proximity;
    
+}
+
+:focus{
+    outline: none;
 }
 
 .navbar{
     background-color: rgb(92, 92, 92); 
-    padding: 7px;
+    padding: 0 1.1rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.navbar ul{
+.navbar p{
+    color: rgb(71, 165, 253);
+    font-size: 1.1rem;
+}
+
+.navbar .nav-list{
     list-style-type: none;
-    padding: 1rem;
     display: flex;
+    gap: 1.4rem;
+    margin-right: 2.4rem;
 }
 
 .navbar li a{
     color: white;
     text-align: center;
     text-decoration: none;
-    font-size: 1.3rem;
-    padding: 12px;
+    font-size: 1.1rem;
     transition: all 0.5s;
 }
 
 .navbar li a:hover{
     color: rgb(71, 165, 253);
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     transform: rotate(60deg);
 }
 
 h1{
     color: white;
-    font-size: 3.5rem;
+    font-size:1.7rem;
 }
 
 .container{
@@ -49,9 +62,11 @@ h1{
 
 .form-group{
     box-sizing: border-box;
-    width: 620px;
+    width: 60%;
+    max-width: 620px;
+    min-width: 350px;
     padding: 2.5rem;
-    padding: 12px;
+  
 }
 
 
@@ -60,8 +75,8 @@ h1{
 .form-group input[type = "text"]{
 
     width: 100%;
-    padding: 1.3rem;
-    margin: 12px;
+    padding: 0.3rem 0.7rem;
+    margin-top: 12px;
     border-radius: 5px;
     font-size: 1.5rem;
    
@@ -70,20 +85,21 @@ h1{
 
 
 .form-group input[type = "submit"]{
-    width: 40%;
-    padding: 0.7rem;
-    font-size: 1.5rem;
+    width: 104%;
+    padding:  0.5rem 0.7rem;
+    margin-top: 1.3rem;
+    font-size: 1.1rem;
     color: white;
     border-radius: 5px;
     background-color: rgb(71, 165, 253);
-    margin: 12px;
+    margin-top: 12px;
     border: none;
     transition: all 0.5s;
 
 }
 
 .form-group input[type = "submit"]:hover{
-    width: 55%;
+    
     background-color: rgb(66, 164, 255);
 }
 
@@ -91,7 +107,7 @@ h1{
 .form-group label{
     color:rgb(255, 255, 255);
     font-size: 1.5rem;
-    padding: 12px;
+    margin-top: 0 1.2rem;
     margin: 0 auto;
 }
 
@@ -108,16 +124,16 @@ h1{
 }
 
 .alert-success{
-    padding: 1.6rem;
-    font-size: 1.6rem;
+    padding: 0.5rem 1.6rem;
+    font-size: 1.1rem;
     background-color: rgb(0, 255, 0);
     color:white;
     font-weight: bold;
 }
 
 .alert-danger{
-    padding: 1.6rem;
-    font-size: 1.6rem;
+    padding: 0.5rem 1.6rem;
+    font-size: 1.1rem;
     background-color: rgb(255, 0, 0);
     color:white;
     font-weight: bold;
@@ -125,16 +141,16 @@ h1{
 
 .close-button{
     margin-bottom: 15px;
-    font-size: 1.6rem;
+    font-size: 1.1rem;
     cursor: pointer;
     color:white;
     float:right;
-    transition: all 0.2s;
+    transition: all 0.7s;
 }
 
 .close-button:hover{
     color: rgb(71, 165, 253);
-    transform: scale(2);
+    transform: scale(1.4);
   
 }
 
@@ -171,6 +187,9 @@ h1{
 .post img{
     border-radius:50%;
     margin: 1.2rem;
+    display: flex;
+    justify-content: center;
+    object-fit: cover;
     padding: 1.2rem;
 }
 
@@ -248,6 +267,7 @@ h1{
 .profile-pic img{
     border-radius: 50%;
     padding: 1.4rem;
+    object-fit: cover;
     margin:1.5rem;
 }
 
@@ -282,4 +302,62 @@ h1{
     text-align: center;
     text-decoration: none;
     font-size: 1.2rem;
+}
+
+.menu{
+    position: absolute;
+    top: 0.95rem;
+    right: 1rem;
+    width: 35px;
+    height: 35px;
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.menu .bar{
+    width:100%;
+    height: 5px;
+    background-color: rgb(71, 165, 253);
+}
+
+
+
+
+@media only screen and (max-width:600px)
+{
+    .navbar .nav-list{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navbar .nav-list.active{
+        display: flex;
+        
+    }
+
+    .navbar .nav-list li{
+        width:100%;
+        
+    }
+
+    .navbar .nav-list li a{
+        text-align: center;
+    }
+
+    .menu{
+        display: flex;
+    }
+
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    
 }
