--- a/Blog App/App/templates/login.html
+++ b/Blog App/App/templates/login.html
@@ -7,7 +7,9 @@
 
     <div class="navbar">
 
-        <ul>
+        <p>BlogApp</p>
+
+        <ul class = 'nav-list'>
             <li><a href="/login"> Login </a></li>
             <li><a href="/sign_up" >Sign Up </a></li>
         </ul>
