--- a/Blog App/App/templates/my-post.html
+++ b/Blog App/App/templates/my-post.html
@@ -7,8 +7,9 @@
 
 
     <div class="navbar">
+        <p>BlogApp</p>
 
-        <ul>
+        <ul class = 'nav-list'>
             <li><a href="/"> Home </a></li>
             <li><a href="/post_view"> Posts </a></li>
             <li><a href="/my-profile" >Profile</a></li>
